--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "dotenv": "^0.4.0",
     "handlebars": "^2.0.0",
+    "lodash": "^2.4.1",
     "restify": "^2.8.4"
   }
 }
