finished buidling RSVP system.

--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   },
   "homepage": "https://github.com/bcoe/cambiandben.com",
   "dependencies": {
+    "async": "^0.9.0",
     "dotenv": "^0.4.0",
     "handlebars": "^2.0.0",
+    "joi": "^5.1.0",
     "lodash": "^2.4.1",
-    "restify": "^2.8.4"
+    "redis": "^0.12.1",
+    "redis-url": "^0.3.1",
+    "restify": "^2.8.4",
+    "to-csv": "0.0.3"
   }
 }
