--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "redis": "^0.12.1",
     "redis-url": "^0.3.1",
     "restify": "^2.8.4",
-    "to-csv": "0.0.3"
-  },
-  "devDependencies": {
+    "to-csv": "0.0.3",
     "uglify-js": "^2.4.16",
     "uglifycss": "0.0.11"
   }
